// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced Slides Feature >  Show Debug Grid 1`] = `
"## My Slide

This slide shows the debug view feature


<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 0px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 70px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 140px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 210px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 280px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 350px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 420px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 490px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 560px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 630px; height: 70px; min-height: 70px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 96px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 192px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 288px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 384px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 480px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 576px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 672px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 768px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>
<div class=\\"reset-margin\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 864px; top: 0px; height: 700px; min-height: 700px; width: 96px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >
</div>

<!-- .slide: class=\\"drop\\" -->
"
`;

exports[`Extended Markdown Syntax >  Block Comments 1`] = `
"<div class=\\"block\\">

#### Header
_and_
Paragraph content
*in same block*

</div>



---

no color

<div class=\\"block\\">

<!-- .element: style=\\"background-color: red\\" -->

everything inside this block has red background color

<div class=\\"block\\">

<!-- .element: style=\\"background-color: blue\\" -->

blue

</div>



red

</div>



no color
"
`;

exports[`Extended Markdown Syntax >  Chart support > Extended Settings 1`] = `
"
<canvas style=\\"max-height:700px\\" data-chart=\\"bar\\" >
<!--
{\\"data\\":{\\"datasets\\":[{\\"data\\":[1,2,3,4,5,6,7,8,9],\\"label\\":\\"Title 1\\",\\"backgroundColor\\":\\"#4285f4\\"},{\\"data\\":[5,4,3,2,1,0,-1,-2,-3],\\"label\\":\\"Title 2\\",\\"backgroundColor\\":\\"#ea4335\\"}],\\"labels\\":[\\"Monday\\",\\"Tuesday\\",\\"Wednesday\\",\\"Thursday\\",\\"Friday\\",\\"Saturday\\",\\"Sunday\\",\\"next Week\\",\\"next Month\\"]},\\"options\\":{\\"elements\\":{\\"bar\\":{\\"spanGaps\\":true,\\"tension\\":0.5}},\\"scales\\":{\\"y\\":{\\"beginAtZero\\":true,\\"stacked\\":true},\\"x\\":{\\"stacked\\":true}},\\"plugins\\":{\\"legend\\":{\\"display\\":false,\\"position\\":\\"left\\"}}}}-->
</canvas>
"
`;

exports[`Extended Markdown Syntax >  Chart support > Illegal Input 1`] = `
"
	
	\`\`\`chart
    type: bar
    labels: [Monday,Tuesday,Wednesday,Thursday,Friday, Saturday, Sunday, \\"next Week\\", \\"next Month\\"]
    series:
      - title: Title 1
        data: [1,2,3,4,5,6,7,8,9]
      - title: Title 2
        data: [5,4,3,2,1,0,-1,-2,-3]
\`

	"
`;

exports[`Extended Markdown Syntax >  Chart support 1`] = `
"
<canvas style=\\"max-height:700px\\" data-chart=\\"bar\\" >
<!--
{\\"data\\":{\\"datasets\\":[{\\"data\\":[1,2,3,4,5,6,7,8,9],\\"label\\":\\"Title 1\\",\\"backgroundColor\\":\\"#4285f4\\"},{\\"data\\":[5,4,3,2,1,0,-1,-2,-3],\\"label\\":\\"Title 2\\",\\"backgroundColor\\":\\"#ea4335\\"}],\\"labels\\":[\\"Monday\\",\\"Tuesday\\",\\"Wednesday\\",\\"Thursday\\",\\"Friday\\",\\"Saturday\\",\\"Sunday\\",\\"next Week\\",\\"next Month\\"]},\\"options\\":{\\"elements\\":{\\"bar\\":{}}}}-->
</canvas>
"
`;

exports[`Extended Markdown Syntax >  Element Annotations 1`] = `
"text with border <!-- .element: class=\\"with-border\\" -->

text with background <!-- .element: style=\\"background: blue\\" -->

text with attribute <!-- .element: data-toggle=\\"modal\\" -->
"
`;

exports[`Extended Markdown Syntax >  Excalidraw support 1`] = `
"#### Excalidraw support

<p style=\\"line-height: 0\\" class=\\"reset-paragraph image-paragraph\\"><img src=\\"path/to/Sample.excalidraw.svg\\" alt=\\"\\" style=\\"width: 100px\\"></img></p>


<p style=\\"line-height: 0\\" class=\\"reset-paragraph image-paragraph\\"><img src=\\"path/to/Sample.excalidraw.svg\\" alt=\\"\\" style=\\"width: 300px; height: 400px\\"></img></p>
"
`;

exports[`Extended Markdown Syntax >  Fragmented list 1`] = `
"# Unordered list

- First
- Second
- Third

---

# Fragmented unordered list

- Permanent
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->First
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->Second
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"3\\" -->Third

---

# Fragmented unordered list with ignored code block

- First
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->Second

\`\`\`diff
- ignored block text 1
+ ignored block text 2
\`\`\`

---

# Ordered list

1. First
2. Second
3. Third

---

# Fragmented ordered list

1. Permanent
1. &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->Second
1. &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->Third
1. &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"3\\" -->Fourth
"
`;

exports[`Extended Markdown Syntax >  Fragments 1`] = `
"Fade in <!-- .element: class=\\"fragment\\" -->

Fade out <!-- .element: class=\\"fragment fade-out\\" -->

Highlight red <!-- .element: class=\\"fragment highlight-red\\" -->

Fade in, then out <!-- .element: class=\\"fragment fade-in-then-out\\" -->

Slide up while fading in <!-- .element: class=\\"fragment fade-up\\" -->

---

- Permanent item
- Appear Fourth <!-- .element: class=\\"fragment\\" data-fragment-index=\\"4\\" -->
- Appear Third <!-- .element: class=\\"fragment\\" data-fragment-index=\\"3\\" -->
- Appear Second <!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->
- Appear First <!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->
"
`;

exports[`Extended Markdown Syntax >  Inline Styling 1`] = `
"<style>
.with-border{
	border: 1px solid red;
}
</style>

styled text <!-- .element: class=\\"with-border\\" -->
"
`;

exports[`Extended Markdown Syntax >  Slide Annotations 1`] = `
"<!-- .slide: style=\\"background-color: coral\\" -->

# Header with coral background color

Paragraph has coral background color, too!

---

<!-- .slide: style=\\"background-color: green\\" -->

- All Bullet points
- have green
- background color
"
`;

exports[`Extended Markdown Syntax >  Slide Backgrounds 1`] = `
"<!-- .slide: data-background=\\"aquamarine\\" -->
## Slide with text based background
---

<!-- .slide: data-background=\\"#ff0000\\" -->
## Slide with hex based background

---

<!-- .slide: data-background=\\"rgb(70, 70, 255)\\" -->
## Slide with rgb based background

---

<!-- .slide: data-background=\\"hsla(315, 100%, 50%, 1)\\" -->
## Slide with hsl based background

---

# Slide without background

---

<!-- .slide: data-background-image=\\"https://picsum.photos/seed/picsum/800/600\\" -->
## Slide with image background

---

<!-- .slide: data-background-image=\\"/documentation/Image.jpg\\" -->
## Slide with image background #2

---

<!-- .slide: data-background-image=\\"https://picsum.photos/seed/picsum/800/600\\" data-background-opacity=\\"0.5\\" -->
## with opacity

0.5 ≙ 50% opacity

---

## More options:

See [reveal backgrounds](https://revealjs.com/backgrounds/)
"
`;

exports[`Extended Markdown Syntax >  Speaker Notes 1`] = `
"## My Slide

This is part of my Presentation


note: this is not! Only the speaker might see this text.

- and this bulletpoint
- or this picture

<p style=\\"line-height: 0\\" class=\\"reset-paragraph image-paragraph\\"><img src=\\"https://picsum.photos/id/1005/250/250\\" alt=\\"\\" ></img></p>

"
`;

exports[`Extended Markdown Syntax > Horizontal / Vertical Slides 1`] = `
"# Slide 1

---

# Slide 2.1

--

# Slide 2.2
"
`;
